Small visual fix: Make the multiselect as wide as textarea to better align with new tasks form elements

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -302,6 +302,8 @@ progress::-webkit-progress-value {
 
 .custom-chip-grid {
   width: 100%;
+  min-width: 300px;
+  max-width: 600px;
 }
 
 .custom-chip-grid mat-chip-row button[matchipremove] {
